--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
     <uses-permission android:name="android.permission.INTERNET"/>
+    <!--android:theme="@style/Theme.SportQuiz"-->
+    <!-- android:theme="@style/Theme.SportQuiz.NoActionBar" -->
+    <!-- android:theme="@style/Theme.SportQuiz.NoActionBar" -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -24,12 +27,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.SportQuiz.NoActionBar" >
-            <!--<intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            android:theme="@style/Theme.SportQuiz.NoActionBar">
         </activity>
     </application>
 
